[package]
name = "tree_hash"
version = "0.6.0"
edition = "2021"
description = "Efficient Merkle-hashing as used in Ethereum consensus"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/tree_hash"
documentation = "https://docs.rs/tree_hash"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
alloy-primitives = "0.7.7"
ethereum_hashing = "0.6.0"
smallvec = "1.6.1"

[dev-dependencies]
rand = "0.8.5"
tree_hash_derive = { git = "https://github.com/eserilev/tree_hash", branch = "alloy-deps"}
ethereum_ssz = { git = "https://github.com/eserilev/ethereum_ssz", branch = "alloy" }
ethereum_ssz_derive = { git = "https://github.com/eserilev/ethereum_ssz", branch = "alloy" }

[features]
arbitrary = ["alloy-primitives/arbitrary"]
